// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OIbTable check Table with help 1`] = `
<div>
  <table
    class="table table table-sm table-striped table-hover"
  >
    <thead>
      <tr>
        <th
          scope="col"
        >
          <svg
            class="oi-icon"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
            />
          </svg>
          <span>
            value
          </span>
        </th>
        <th
          scope="col"
        />
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`OIbTable check Table with name, label and rows 1`] = `
<div>
  <table
    class="table table table-sm table-striped table-hover"
  >
    <thead>
      <tr>
        <th
          scope="col"
        >
          <svg
            class="oi-icon"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
            />
          </svg>
          <span>
            value
          </span>
        </th>
        <th
          scope="col"
        />
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`OIbTable check add to table 1`] = `
<div>
  <table
    class="table table table-sm table-striped table-hover"
  >
    <thead>
      <tr>
        <th
          scope="col"
        >
          <svg
            class="oi-icon"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
            />
          </svg>
          <span>
            value
          </span>
        </th>
        <th
          scope="col"
        />
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`OIbTable check delete from table 1`] = `
<div>
  <table
    class="table table table-sm table-striped table-hover"
  >
    <thead>
      <tr>
        <th
          scope="col"
        >
          <svg
            class="oi-icon"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
            />
          </svg>
          <span>
            Scan Mode
          </span>
        </th>
        <th
          scope="col"
        />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="align-top"
        >
          <div
            class="mb-3"
          >
            <select
              aria-invalid="false"
              class="oi-form-input form-select"
              id="name.0.scanMode"
              name="name.0.scanMode"
            >
              <option
                value=""
              />
            </select>
            <div
              class="invalid-feedback"
            />
          </div>
        </td>
        <td
          class="align-center"
        >
          <svg
            class="oi-icon"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
